Add new narc1,2,3 pages; created sketches for Flex and IC-718 pages.

--- a/src/_quarto.yml
+++ b/src/_quarto.yml
@@ -10,7 +10,9 @@ book:
     - index.qmd
     - logistics.qmd
     - antennas.qmd
-    - "IC-7610.qmd"
+    - narc1.qmd
+    - narc2.qmd
+    - narc3.qmd
     - "wifi-internet.qmd"
     - packet_aprs.qmd
 
