Update digital mode pages for 7610; other minor changes.

--- a/src/_quarto.yml
+++ b/src/_quarto.yml
@@ -4,7 +4,7 @@ project:
 
 book:
   title: "Nittany ARC Station Guide"
-  author: "Rick Gilmore"
+  author: "Rick Gilmore W3TM"
   date: "2023-12-20"
   output-file: "NARC-Clubhouse-Guide"
   cover-image: "include/img/60-ft-tower-west.jpg"
