--- a/src/_quarto.yml
+++ b/src/_quarto.yml
@@ -5,7 +5,7 @@ project:
 book:
   title: "Nittany ARC Station Guide"
   author: "Rick Gilmore W3TM"
-  date: "2023-12-20"
+  date: "2024-03-09"
   output-file: "NARC-Clubhouse-Guide"
   cover-image: "include/img/60-ft-tower-west.jpg"
   chapters:
@@ -17,14 +17,22 @@ book:
         - narc2.qmd
         - narc3.qmd    
         - packet_aprs.qmd
+    - part: rigs.qmd
+      chapters:
+        - ic-7610.qmd
+        - flex-6400M.qmd
+        - ic-718.qmd
         - kenwood-D710.qmd
-        - remote-operations.qmd
     - part: "Other resources"
       chapters:
         - antennas.qmd
         - wifi-internet.qmd
+        - remote-operations.qmd
+        - test-suite.qmd
 format:
   html:
     theme: cosmo
     number-sections: false
+  pdf:
+    documentclass: scrbook
     
