Add some PDF manuals; add TM-D710 figure; new software.qmd page; minor edits to test-suite.qmd.

--- a/src/_quarto.yml
+++ b/src/_quarto.yml
@@ -5,7 +5,6 @@ project:
 book:
   title: "Nittany ARC Station Guide"
   author: "Rick Gilmore W3TM"
-  date: "2024-03-09"
   output-file: "NARC-Clubhouse-Guide"
   cover-image: "include/img/60-ft-tower-west.jpg"
   chapters:
@@ -29,10 +28,13 @@ book:
         - wifi-internet.qmd
         - remote-operations.qmd
         - test-suite.qmd
+        - software.qmd
 format:
   html:
     theme: cosmo
     number-sections: false
+    date-modified: "2024-04-26"
+    fontsize: 1.2em
   pdf:
     documentclass: scrbook
     
