--- a/src/_quarto.yml
+++ b/src/_quarto.yml
@@ -33,7 +33,7 @@ format:
   html:
     theme: cosmo
     number-sections: false
-    date-modified: "2024-04-26"
+    date-modified: last-modified
     fontsize: 1.2em
   pdf:
     documentclass: scrbook
