Add GitHub hooks site-wide and render.

--- a/src/_quarto.yml
+++ b/src/_quarto.yml
@@ -29,6 +29,9 @@ book:
         - remote-operations.qmd
         - test-suite.qmd
         - software.qmd
+  repo-url: https://github.com/nittany-amateur-radio-club/clubhouse
+  repo-actions: [edit, issue]
+  repo-subdir: src
 format:
   html:
     theme: cosmo
