New logging.qmd; update software.qmd; add Field Day tests to test-suite.qmd and modify monthly tests.

--- a/src/_quarto.yml
+++ b/src/_quarto.yml
@@ -29,6 +29,7 @@ book:
         - remote-operations.qmd
         - test-suite.qmd
         - software.qmd
+        - logging.qmd
   repo-url: https://github.com/nittany-amateur-radio-club/clubhouse
   repo-actions: [edit, issue]
   repo-subdir: src
