--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,7 @@ jobs:
         uses: quarto-dev/quarto-actions/publish@v2
         with:
           target: gh-pages
+          path: #src
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
